upload and download file

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "cy-verify-downloads": "^0.1.11",
+    "cypress-downloadfile": "^1.2.3",
+    "cypress-file-upload": "^5.0.8",
+    "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1"
   }
