--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,23 @@
   },
   "homepage": "https://github.com/ways92/specimen-cypress#readme",
   "dependencies": {
+    "@types/browserify": "^12.0.37",
     "cypress": "^9.6.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/cypress-cucumber-preprocessor": "^4.0.1",
+    "@types/node": "^18.11.9",
     "cy-verify-downloads": "^0.1.11",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-downloadfile": "^1.2.3",
     "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "stepDefinitions": "cypress/step_definitions"
   }
 }
